# sage-kb-chatbot

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  cdk.json  pyproject.toml  requirements.txt
.github/workflows/: pre-merge.yaml  test.yaml
.kiro/hooks/: commit-message.kiro.hook  lint-and-format-on-save.kiro.hook  pre-commit-check.kiro.hook  review-before-push.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/sage-kb-chatbot/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/slack-agent-router/: .config.kiro  agent-state-machine.drawio  design.md  requirements.md  slack-agent-router-architecture.drawio  tasks.md
.kiro/steering/: async-patterns.md  coding-style.md  dependency-management.md  e2e-testing.md  git-workflow.md  mcp-client.md  performance.md  python-patterns.md  refactoring.md  secrets-handling.md  security-review.md  security.md  slack-conventions.md  tdd-workflow.md  testing.md
docs/: sage-kb-chatbot-architecture.drawio
sage_kb_chatbot/: sage_kb_chatbot_stack.py
src/slack_agent_router/: __init__.py  audit_logger.py  formatter.py  models.py  orchestrator.py  rate_limiter.py  sanitize.py  slack_app.py
src/slack_agent_router/backends/: __init__.py  rovo.py  vertex.py
stacks/: sage_kb_chatbot_stack.py
tests/: test_audit_logger.py  test_formatter.py  test_orchestrator.py  test_rate_limiter.py  test_rovo_backend.py  test_sanitize.py  test_slack_app.py  test_vertex_backend.py
tests/unit/: test_sage_kb_chatbot_stack.py
