[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-agent-router"
version = "0.1.0"
description = "Slack chatbot that routes questions via Amazon Bedrock Agent to knowledge backends"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.21,<2",
    "slack-sdk>=3.33,<4",
    "httpx>=0.27,<1",
    "aiohttp>=3.10,<4",
    "mcp>=1.0,<2",
    "google-cloud-discoveryengine>=0.13,<1",
    "google-auth>=2.36,<3",
    "pydantic>=2.10,<3",
    "boto3>=1.35,<2",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.118,<7",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "pytest-mock>=3.14,<4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/slack_agent_router"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/slack_agent_router"]
omit = ["src/slack_agent_router/models.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.black]
line-length = 120
target-version = ["py312"]
